update to home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,10 @@
     </div>
   </main>
 
+  <div class="container section-space">
+    <%- include('components/videos') -%>
+  </div>
+
   <article>
     <div class="container section-space">
       <p class="lead">Want To See More Videos? <a href="https://www.youtube.com/channel/UCVnM7MvYo98WIDwUjPay-Zg" target="_blank">Subsrcibe</a> to our YoutTube Channel</p>
