--- a/views/components/videos.ejs
+++ b/views/components/videos.ejs
@@ -6,7 +6,18 @@
              data-mdb-animation-start="onScroll"
              data-mdb-animation="fade-in"
              class="col-lg-4 col-md-12 mb-4">
-            <iframe width="100%" height="250" src="https://www.youtube.com/embed/PTgOiy_xxRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="card p-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <iframe width="100%" height="170" src="https://www.youtube.com/embed/PTgOiy_xxRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Title</h3>
+                        <p>2020</p>
+                        <a href="#!" class="btn btn-outline-black form-control">Watch</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--Grid column-->
 
@@ -16,7 +27,18 @@
              data-mdb-animation="fade-in"
              data-mdb-animation-delay="300"
              class="col-lg-4 col-md-6 mb-4">
-            <iframe width="100%" height="250" src="https://www.youtube.com/embed/Jqu53qtTGig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="card p-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <iframe width="100%" height="170" src="https://www.youtube.com/embed/Jqu53qtTGig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Title</h3>
+                        <p>2020</p>
+                        <a href="#!" class="btn btn-outline-black form-control">Watch</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--Grid column-->
 
@@ -27,7 +49,18 @@
              data-mdb-animation-delay="500"
              class="col-lg-4 col-md-6 mb-4">
 
-            <iframe width="100%" height="250" src="https://www.youtube.com/embed/u-6v2BgeWgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="card p-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <iframe width="100%" height="170" src="https://www.youtube.com/embed/u-6v2BgeWgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Title</h3>
+                        <p>2020</p>
+                        <a href="#!" class="btn btn-outline-black form-control">Watch</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--Grid column-->
     </div>
@@ -40,7 +73,18 @@
              data-mdb-animation-start="onScroll"
              data-mdb-animation="fade-in"
              class="col-lg-4 col-md-12 mb-4">
-            <iframe width="100%" height="250" src="https://www.youtube.com/embed/PTgOiy_xxRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="card p-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <iframe width="100%" height="170" src="https://www.youtube.com/embed/PTgOiy_xxRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Title</h3>
+                        <p>2020</p>
+                        <a href="#!" class="btn btn-outline-black form-control">Watch</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--Grid column-->
 
@@ -50,7 +94,18 @@
              data-mdb-animation="fade-in"
              data-mdb-animation-delay="300"
              class="col-lg-4 col-md-6 mb-4">
-            <iframe width="100%" height="250" src="https://www.youtube.com/embed/Jqu53qtTGig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="card p-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <iframe width="100%" height="170" src="https://www.youtube.com/embed/Jqu53qtTGig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Title</h3>
+                        <p>2020</p>
+                        <a href="#!" class="btn btn-outline-black form-control">Watch</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--Grid column-->
 
@@ -61,7 +116,18 @@
              data-mdb-animation-delay="500"
              class="col-lg-4 col-md-6 mb-4">
 
-            <iframe width="100%" height="250" src="https://www.youtube.com/embed/u-6v2BgeWgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="card p-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <iframe width="100%" height="170" src="https://www.youtube.com/embed/u-6v2BgeWgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Title</h3>
+                        <p>2020</p>
+                        <a href="#!" class="btn btn-outline-black form-control">Watch</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--Grid column-->
     </div>
