--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,24 +5,25 @@
 <%- include('layouts/navbar') -%>
   <body>
 
-  <main class="container space">
-    <h1 data-mdb-toggle="animation"
-        data-mdb-animation="fade-in-down"
-        data-mdb-animation-start="onLoad"
-        class="display-2 text-center">
-      Democracy & Dissent
-    </h1>
-    <h1 class="text-center">Filming Studios & Productions</h1>
-    <hr class="line" />
-    <div class="row mt-5 mb-5">
-      <div class="col-md p-2">
-        <h1 data-mdb-toggle="animation"
-            data-mdb-animation-start="onLoad"
-            data-mdb-animation="fade-in-left"
-            data-mdb-animation-delay="300"
-            class="display-4 title">
-          Page Title
-        </h1>
+  <main class="bg">
+    <div class="container">
+      <h1 data-mdb-toggle="animation"
+          data-mdb-animation="fade-in-down"
+          data-mdb-animation-start="onLoad"
+          class="display-2 text-center">
+        Democracy & Dissent
+      </h1>
+      <h1 class="text-center">Filming Studios & Productions</h1>
+      <hr class="line" />
+      <div class="row mt-5 mb-5">
+        <div class="col-md p-2">
+          <h1 data-mdb-toggle="animation"
+              data-mdb-animation-start="onLoad"
+              data-mdb-animation="fade-in-left"
+              data-mdb-animation-delay="300"
+              class="display-4 title">
+            Page Title
+          </h1>
           <p data-mdb-toggle="animation"
              data-mdb-animation-start="onLoad"
              data-mdb-animation="fade-in-left"
@@ -30,15 +31,16 @@
              class="lead">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium amet asperiores debitis dolorem ducimus eius enim illum libero necessitatibus.
           </p>
-          <a href="mailto:#!" class="btn btn-outline-black rounded-pill w-50">Message us</a>
+          <a href="mailto:#!" class="btn btn-black rounded-pill w-50">Message us</a>
 
-      </div>
-      <div data-mdb-toggle="animation"
-           data-mdb-animation-start="onLoad"
-           data-mdb-animation="fade-in-right"
-           data-mdb-animation-delay="700"
-           class="col-md p-2">
-        <iframe width="100%" height="338" src="https://www.youtube.com/embed/bdaVzNkcySA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onLoad"
+             data-mdb-animation="fade-in-right"
+             data-mdb-animation-delay="700"
+             class="col-md p-2">
+          <iframe width="100%" height="338" src="https://www.youtube.com/embed/bdaVzNkcySA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </main>
