update to home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,6 +56,59 @@
     </div>
   </article>
 
+  <article class="block">
+    <div class="container">
+      <h1 class="display-2 fw-bolder text-center">About Us</h1>
+      <div class="row text-center">
+        <div class="col-md p-2">
+          <img src="/img/Frank_picture2.png" class="rounded-circle h-25 img-fluid" alt="frank">
+          <br>
+          <h2>Frank Jr Battaglia</h2>
+          <h4>Producer, Story and Script Consultant, Post Production Supervisor, Field Producer</h4>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam atque eius illum laborum minima minus.
+          </p>
+          <a href="mailto:#!" class="btn btn-white rounded-pill btn-lg">email me</a>
+        </div>
+        <div class="col-md p-2">
+          <img src="/img/Spirer_pic.png" class="rounded-circle h-25 img-fluid" alt="frank">
+          <br>
+          <h2>Frank Jr Battaglia</h2>
+          <h4>Producer, Story and Script Consultant, Post Production Supervisor, Field Producer</h4>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam atque eius illum laborum minima minus.
+          </p>
+          <a href="mailto:#!" class="btn btn-white rounded-pill btn-lg">email me</a>
+        </div>
+        <div class="col-md p-2">
+          <img src="/img/Ener_suit.png" class="rounded-circle h-25 img-fluid" alt="frank">
+          <br>
+          <h2>Ener Misterener</h2>
+          <h4>AKA Misterener, relocated to Toronto from Brazil  in 2017</h4>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam atque eius illum laborum minima minus.
+          </p>
+          <a href="mailto:#!" class="btn btn-white rounded-pill btn-lg">email me</a>
+        </div>
+      </div>
+    </div>
+  </article>
+
+  <section>
+    <div class="container section-space text-center">
+      <h1>Community Membership</h1>
+      <p class="lead">
+        Join us On YouTube and signup on my site to share blogs and upload articles.
+      </p>
+      <a href="#!" class="btn btn-black w-50 rounded-pill">Register</a>
+      <br>
+      <img src="https://scribie.com/assets/front/illustrations/Welcome-to-scribie-512x391.svg"
+           class="img-fluid mt-3 rounded-circle"
+           style="height: 290px;"
+           alt="signup" />
+    </div>
+  </section>
+
   <%- include('layouts/footer') -%>
   </body>
   <%- include('layouts/scripts') -%>
