--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -56,7 +56,7 @@
             <!-- Icons -->
             <ul class="navbar-nav d-flex flex-row me-1">
                 <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
+                    <a class="nav-link" href="#"><i class="fab fa-linkedin-in"></i></a>
                 </li>
                 <li class="nav-item me-3 me-lg-0">
                     <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
