uploaded home page changes and two more pages added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
 
   <article class="block">
     <div class="container">
-      <h1 class="display-2 fw-bolder text-center">About Us</h1>
+      <h1 class="display-3 fw-bolder text-center">The Production Team</h1>
       <div class="row text-center">
         <div class="col-md p-2">
           <img src="/img/Frank_picture2.png" class="rounded-circle h-25 img-fluid" alt="frank">
@@ -94,20 +94,6 @@
     </div>
   </article>
 
-  <section>
-    <div class="container section-space text-center">
-      <h1>Community Membership</h1>
-      <p class="lead">
-        Join us On YouTube and signup on my site to share blogs and upload articles.
-      </p>
-      <a href="#!" class="btn btn-black w-50 rounded-pill">Register</a>
-      <br>
-      <img src="https://scribie.com/assets/front/illustrations/Welcome-to-scribie-512x391.svg"
-           class="img-fluid mt-3 rounded-circle"
-           style="height: 290px;"
-           alt="signup" />
-    </div>
-  </section>
 
   <%- include('layouts/footer') -%>
   </body>
