--- a/public/css/index.css
+++ b/public/css/index.css
@@ -24,8 +24,19 @@ body {
     width: 100%;
     padding-top: 60px;
     padding-bottom: 60px;
-    color: palegoldenrod;
-    text-shadow: lightgrey!important;
+    color: #cea135;
+}
+
+.media-intro {
+    background: url("../img/media-intro-img.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    color: white;
 }
 
 .block {
@@ -46,6 +57,17 @@ body {
         padding-bottom: 30px;
         color: #cea135;
     }
+    .media-intro {
+        background: url("../img/media-intro-img.png") no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        width: 100%;
+        padding-top: 60px;
+        padding-bottom: 60px;
+        color: white;
+    }
 }
 
 .max {
@@ -57,6 +79,22 @@ body {
     color: darkgoldenrod;
     border-bottom: 6px solid;
     width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 22px;
+}
+
+.media-line {
+    border-bottom: 2px solid black;
+    width: 100%;
+    margin-top: 15%;
+    margin-bottom: 15%;
+}
+
+.footer-line {
+    color: #f4f4f4;
+    border-bottom: 2px solid;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 22px;
