--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,4 +1,5 @@
 <footer  class="bg-black text-white">
+    <div class="footer-line"></div>
     <div class="container p-4">
         <div class="row">
             <div class="col-lg-6 col-md-12 mb-4">
