--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -27,10 +27,10 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="/media">Media</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="/lindbergh911">Lindbergh's 9/11</a>
                 </li>
                 <!-- Dropdown -->
                 <li class="nav-item dropdown">
@@ -56,13 +56,19 @@
             <!-- Icons -->
             <ul class="navbar-nav d-flex flex-row me-1">
                 <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="nav-link" href="https://www.youtube.com/channel/UCVnM7MvYo98WIDwUjPay-Zg" target="_blank"><i class="fab fa-youtube"></i></a>
                 </li>
                 <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="nav-link" href="http://instagram.com/stw_dem_dis" target="_blank"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#"><i class="fab fa-facebook"></i></a>
+                    <a class="nav-link" href="https://vimeo.com/user12241547" target="_blank"><i class="fab fa-vimeo"></i></a>
+                </li>
+                <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="http://twitter.com/@STW_Dem_Dis" target="_blank"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="https://www.facebook.com/StopTheWheelProductions/" target="_blank"><i class="fab fa-facebook"></i></a>
                 </li>
             </ul>
             <!-- Search -->
