--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,6 +49,10 @@
     <%- include('components/videos') -%>
   </div>
 
+  <div class="section-space container">
+    <%- include('components/blogs') -%>
+  </div>
+
   <article>
     <div class="container section-space">
       <p class="lead">Want To See More Videos? <a href="https://www.youtube.com/channel/UCVnM7MvYo98WIDwUjPay-Zg" target="_blank">Subsrcibe</a> to our YoutTube Channel</p>
