--- a/views/lindbergh911.ejs
+++ b/views/lindbergh911.ejs
@@ -7,7 +7,7 @@
 
 <header>
     <div class="container mt-5">
-        <div class="row row-cols-xl-6 d-flex mx-auto py-1 my-1 justify-content-center align-items-center text-center">
+        <div class="row text-center">
             <h1 class="display-4">
                 THE REAL PLOT AGAINST AMERICA
             </h1>
