--- a/views/components/blogs.ejs
+++ b/views/components/blogs.ejs
@@ -1,5 +1,9 @@
 <div class="row">
-    <div class="col-md">
+    <div data-mdb-toggle="animation"
+         data-mdb-animation-start="onScroll"
+         data-mdb-animation="fade-in"
+         data-mdb-animation-delay="300"
+         class="col-md">
         <a href="#!">
             <h3 class="fw-bolder">Recent Blog Post</h3>
         </a>
@@ -10,7 +14,11 @@
             <strong>Posted On April 15, 2022</strong>
         </p>
     </div>
-    <div class="col-md">
+    <div data-mdb-toggle="animation"
+         data-mdb-animation-start="onScroll"
+         data-mdb-animation="fade-in"
+         data-mdb-animation-delay="500"
+         class="col-md">
         <img src="https://images.unsplash.com/photo-1594909122845-11baa439b7bf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
              class="img-fluid shadow-lg rounded"
              alt="img" />
