--- a/views/components/imageCarousel.ejs
+++ b/views/components/imageCarousel.ejs
@@ -1,15 +1,30 @@
 <div class="multi-carousel">
     <div class="multi-carousel-inner">
-        <div class="multi-carousel-item">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+             class="multi-carousel-item">
             <img src="/img/carousel-img-1.png" alt="Table Full of Spices" class="w-100"/>
         </div>
-        <div class="multi-carousel-item">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+             data-mdb-animation-delay="300"
+             class="multi-carousel-item">
             <img src="/img/carousel-img-2.png" alt="Winter Landscape" class="w-100"/>
         </div>
-        <div class="multi-carousel-item">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+             data-mdb-animation-delay="500"
+             class="multi-carousel-item">
             <img src="/img/carousel-img-3.png" alt="View of the City in the Mountains" class="w-100"/>
         </div>
-        <div class="multi-carousel-item">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+             data-mdb-animation-delay="700"
+             class="multi-carousel-item">
             <img src="/img/carousel-img-4.png" alt="Place Royale Bruxelles" class="w-100"/>
         </div>
     </div>
