--- a/views/lindbergh911.ejs
+++ b/views/lindbergh911.ejs
@@ -7,7 +7,10 @@
 
 <header>
     <div class="container mt-5">
-        <div class="row text-center">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onLoad"
+             data-mdb-animation="fade-in-down"
+                class="row text-center">
             <h1 class="display-4">
                 THE REAL PLOT AGAINST AMERICA
             </h1>
@@ -19,17 +22,36 @@
     <div class="container">
 
         <p class="lead">
+            <span data-mdb-toggle="animation"
+                  data-mdb-animation-start="onLoad"
+                  data-mdb-animation="fade-in-left"
+                  data-mdb-animation-delay="300">
             On <b>September 11th</b>, 1941 <i>Charles Lindbergh</i> delivered an anti-war speech in Des Moines Iowa, that launched a vicious propaganda smear  campaign targeting Lindbergh as being an unpatriotic American and worse an anti-Semite. What did Lindbergh do incur the wrath of the media and the government?
+            </span>
             <br><br>
+            <span data-mdb-toggle="animation"
+                  data-mdb-animation-start="onLoad"
+                  data-mdb-animation="fade-in-right"
+                  data-mdb-animation-delay="500">
             Lindbergh had the audacity to name the three groups that were urging America to enter world War Two. The speech would change his life forever. The three groups Charles named were the British, President Roosevelt and, against his wife Anne’s warnings, he named the third group being, the Jews. His naming the Jews released a firestorm of vitriol hat painted Lindbergh as a Nazi loving, anti-Semitic fifth-columnist.
+            </span>
             <br><br>
             <img src="/img/introPlot.png" class="img-fluid h-50 rounded-circle shadow-4-strong" alt="plot" />
             <br><br>
+            <span data-mdb-toggle="animation"
+                  data-mdb-animation-start="onScroll"
+                  data-mdb-animation="fade-in"
+                  data-mdb-animation-delay="500">
             HBO has released a mini-series, “The Plot Against America,” the Philip Roth novel whose premise is that Charles Lindbergh is elected president in 1940. What follows "after that demonstrates Roth’s pathetic ethnic paranoia as well as his ethnic bigotry. “The most significant thing about Roth’s book is the fact that it’s fiction, a Jewish fantasy, if you will.” Why? It is more propaganda leveled at a Patriotic American who stood for Peace and Diplomacy over war. Crazy huh? “Plot,” shamefully distorts and further impugns the character of one of America’s truly great patriots.
+            </span>
             <br><br>
             Our film, Lindbergh’s 9/11 explains the, “Why?”
             <br><br>
-            <h1 class="display-6 text-center fw-light">
+            <h1 data-mdb-toggle="animation"
+                data-mdb-animation-start="onScroll"
+                data-mdb-animation="fade-in"
+                data-mdb-animation-delay="300"
+                class="display-6 text-center fw-light">
                 “No person with a sense of dignity of mankind can condone the persecution of the Jewish race in Germany.”
                 <br><br>
                 ”Does this sound like the raving of an anti-Semite?”
