--- a/views/media.ejs
+++ b/views/media.ejs
@@ -16,10 +16,17 @@
 <main class="section-space">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-12 p-2">
+            <div data-mdb-toggle="animation"
+                 data-mdb-animation-start="onLoad"
+                 data-mdb-animation="fade-in"
+                 class="col-md-6 col-sm-12 p-2">
                 <img src="/img/MacArthur.png" class="img-fluid shadow-lg rounded" alt="McArthur" />
             </div>
-            <div class="col-md-6 col-sm-12 p-2">
+            <div data-mdb-toggle="animation"
+                 data-mdb-animation-start="onLoad"
+                 data-mdb-animation="fade-in"
+                 data-mdb-animation-delay="300"
+                 class="col-md-6 col-sm-12 p-2">
                 General Douglas MacArthur warned Americans that "Talk of imminent threats to our national security through the application of external force is pure nonsense. Our threat is from the insidious forces working from within which have already so drastically altered the character of our free institutions — those institutions we proudly called the American way of life."  Speech to the Michigan legislature, in  Lansing, Michigan (15 May 1952), published in General MacArthur Speeches  and Reports 1908-1964 (2000) by Edward T. Imparato, p. 206
             </div>
         </div>
@@ -28,10 +35,17 @@
 
 <div class="container section-space">
     <div class="row">
-        <div class="col-md m-2">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+                class="col-md m-2">
             <iframe width="100%" height="290" src="https://www.youtube.com/embed/PTgOiy_xxRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-md m-2">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+             data-mdb-animation-delay="300"
+                class="col-md m-2">
             <hr class="media-line" />
             <br>
             <h4 class="justify-items-center align-items-center text-center mx-auto d-flex">
@@ -40,7 +54,11 @@
             <br>
             <hr class="media-line" />
         </div>
-        <div class="col-md m-2">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+             data-mdb-animation-delay="500"
+                class="col-md m-2">
             <iframe width="100%" height="290" src="https://www.youtube.com/embed/Jqu53qtTGig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
@@ -48,16 +66,27 @@
 
 <div class="container section-space">
     <div class="row">
-        <div class="col-md m-2">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+                class="col-md m-2">
             <iframe width="100%" height="290" src="https://www.youtube.com/embed/u-6v2BgeWgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-md m-2">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+             data-mdb-animation-delay="300"
+                class="col-md m-2">
             <img src="/img/911.png"
                  class="img-fluid shadow-4-strong rounded"
                  style="max-height: 290px; width: 100%;"
                  alt="img" />
         </div>
-        <div class="col-md m-2">
+        <div data-mdb-toggle="animation"
+             data-mdb-animation-start="onScroll"
+             data-mdb-animation="fade-in"
+             data-mdb-animation-delay="500"
+                class="col-md m-2">
             <iframe width="100%" height="290" src="https://www.youtube.com/embed/9wxplj5uw-s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
