--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -27,10 +27,10 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Media</a>
+                    <a class="nav-link" href="/media">Media</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Lindbergh's 9/11</a>
+                    <a class="nav-link" href="/lindbergh911">Lindbergh's 9/11</a>
                 </li>
                 <!-- Dropdown -->
                 <li class="nav-item dropdown">
