--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
   </div>
 
   <div class="section-space container">
-    <%- include('components/blogs') -%>
+    <%- include('components/projects') -%>
   </div>
 
   <article>
